Fix implementation of DatumSourceIdProvider to return all source IDs.